syntax = "proto3";

package xseed;

import "google/protobuf/any.proto";
import "peer.proto";

message CreateSessionRequest {
    repeated Peer peers = 1;
    google.protobuf.Any initial_state = 2;
}

message CreateSessionResponse {
    string session_id = 1;
}

message DestroySessionRequest {
    string id = 1;
}

message DestroySessionResponse {
}

message JoinSessionRequest {
    string session_id = 1;
}

message JoinSessionResponse {
    string peer_id = 1;
}
service SessionService {
    rpc Create (CreateSessionRequest) returns (CreateSessionResponse);
    rpc Destroy (DestroySessionRequest) returns (DestroySessionResponse);
    rpc Join (JoinSessionRequest) returns (JoinSessionResponse);
}